tests/fixtures/invalid/pow_float_str_none.py
# Cannot call pow() with Float, Str, None
x = pow(1.0, "hello", None)
